force-app/main/default/objects/Town_Distance__c/Town_Distance__c.object-meta.xml
<CustomObject>
    <description>A junction object that calculates the distance between two towns</description>
    <label>Town Distance</label>
    <nameField>
        <label>Town Distance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Town Distances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>