force-app/main/default/objects/Town_Distance__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Town where the Journey Ends</description>
    <label>Destination</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Town Distances (Destination)</relationshipLabel>
    <relationshipName>Town_Distances1</relationshipName>
    <type>Lookup</type>
</CustomField>