force-app/main/default/objects/Town_Distance__c/fields/Destination_Province__c.field-meta.xml
<CustomField>
    <fullName>Destination_Province__c</fullName>
    <formula>TEXT( Destination__r.Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Province</label>
    <type>Text</type>
</CustomField>