force-app/main/default/objects/Town_Distance__c/fields/Driving_Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Driving_Distance_Km__c</fullName>
    <inlineHelpText>This is the driving distance according to Bing Maps. Can also be manually added</inlineHelpText>
    <label>Driving Distance (Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>