force-app/main/default/objects/Town_Distance__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>The time required to drive between the two towns</inlineHelpText>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>