force-app/main/default/objects/Town_Distance__c/fields/Start_End__c.field-meta.xml
<CustomField>
    <fullName>Start_End__c</fullName>
    <formula>IF( Starting_Town__c =  Destination__c, TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start = End</label>
    <type>Checkbox</type>
</CustomField>