force-app/main/default/objects/Town_Distance__c/fields/Starting_Town__c.field-meta.xml
<CustomField>
    <fullName>Starting_Town__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The town where the journey begins</description>
    <label>Starting Town</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Town Distances</relationshipLabel>
    <relationshipName>Town_Distances</relationshipName>
    <type>Lookup</type>
</CustomField>