force-app/main/default/objects/Town_Distance__c/fields/Starting_Town_Province__c.field-meta.xml
<CustomField>
    <fullName>Starting_Town_Province__c</fullName>
    <formula>TEXT(Starting_Town__r.Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting Town Province</label>
    <type>Text</type>
</CustomField>