force-app/main/default/objects/Town_Distance__c/fields/UpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>UpdateDateTime__c</fullName>
    <description>Used when triggering the Apex class that calculates the driving distance. Udating this field will trigger the integration to run</description>
    <label>UpdateDateTime</label>
    <type>DateTime</type>
</CustomField>