force-app/main/default/objects/Town_Distance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Driving_Distance_Km__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>